--- a/components/FixdappFooter/FixdAppFooter.module.scss
+++ b/components/FixdappFooter/FixdAppFooter.module.scss
@@ -19,7 +19,7 @@
     flex-wrap: wrap;
 
     .col1 {
-      flex: 1;
+      flex: 0 0 25%; // Update this line to set the width of the first column to 25%
       padding: 0 15px;
       align-content: flex-start;
 
