--- a/components/FixdappFooter/FixdAppFooter.module.scss
+++ b/components/FixdappFooter/FixdAppFooter.module.scss
@@ -51,6 +51,7 @@
       }
 
       .localul {
+        list-style-type: none; // Add this line to remove list decoration
         font-size: 14px;
         margin-bottom: 15px;
       }
