--- a/components/AaronFooter/AaronFooter.module.scss
+++ b/components/AaronFooter/AaronFooter.module.scss
@@ -1,39 +1,9 @@
 // Import variables
 @import "styles/_Variables.scss";
 
-
-.footerContainer {
+.container {
   max-width: 1200px;
   margin: 0 auto;
   width: 100%;
 }
-.custom-row {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.content-col {
-  width: 25%;
-}
-
-.content-col2,
-.content-col3,
-.content-col4,
-.content-col5 {
-  flex: 1;
-}
-
-@media (max-width: 767.98px) {
-  .content-col,
-  .content-col2,
-  .content-col3,
-  .content-col4,
-  .content-col5 {
-    width: 100%;
-    margin-bottom: 20px;
-  }
-}
-
-
 
