God bless the MUI

--- a/components/AaronFooter/AaronFooter.module.scss
+++ b/components/AaronFooter/AaronFooter.module.scss
@@ -1,7 +1,7 @@
 // Import variables
 @import "styles/_Variables.scss";
 
-.container {
+.localcontainer {
   max-width: 1200px;
   margin: 0 auto;
   width: 100%;
